syntax = "proto3";

option optimize_for = LITE_RUNTIME;
option java_multiple_files = true;
option java_package = "com.github.yoep.popcorn.backend.lib.ipc.protobuf";

package fx.ipc.proto;

message Update {

  message VersionInfo {
    PatchInfo application = 1;
    PatchInfo runtime = 2;
  }

  message PatchInfo {
    string version = 1;
    map<string, string> platforms = 2;
  }

  message DownloadProgress {
    // The total size of the update in bytes.
    uint64 total_size = 1;
    // The completed bytes of the update.
    uint64 downloaded = 2;
  }

  enum State {
    CHECKING_FOR_NEW_VERSION = 0;
    UPDATE_AVAILABLE = 1;
    NO_UPDATE_AVAILABLE = 2;
    DOWNLOADING = 3;
    DOWNLOAD_FINISHED = 4;
    INSTALLING = 5;
    INSTALLATION_FINISHED = 6;
    ERROR = 7;
  }
}

message GetUpdateStateRequest {}

message GetUpdateStateResponse {
  Update.State state = 1;
}

message GetUpdateInfoRequest {}

message GetUpdateInfoResponse {
  optional Update.VersionInfo info = 1;
}

message UpdateEvent {
  Event event = 1;
  optional StateChanged state_changed = 2;
  optional UpdateAvailable update_available = 3;

  message StateChanged {
    Update.State new_state = 1;
  }

  message UpdateAvailable {
    Update.VersionInfo version_info = 1;
  }

  enum Event {
    STATE_CHANGED = 0;
    UPDATE_AVAILABLE = 1;
    DOWNLOAD_PROGRESS = 2;
    INSTALLATION_PROGRESS = 3;
  }
}